import test from 'node:test';
import outdent from 'outdent';
import {Linter} from 'eslint';
import unicorn from '../index.js';
import {getTester, languages} from './utils/test.js';

const {test: ruleTest} = getTester(import.meta);

const checkPropertiesOptions = [
	{
		checkProperties: true,
	},
];

const checkImportsOptions = [
	{
		checkDefaultAndNamespaceImports: true,
		checkShorthandImports: true,
	},
];

const checkShorthandPropertiesOptions = [
	{
		checkShorthandProperties: true,
	},
];

const onlyCheckPropertiesOptions = [
	{
		checkProperties: true,
		checkVariables: false,
	},
];

const customOptions = [
	{
		extendDefaultReplacements: false,
		replacements: {
			fooBar: 'foobar',
		},
	},
];

const propertyError = {
	messageId: 'consistent-compound-words/error',
};

const withJsx = tests => ({
	...tests,
	testerOptions: {
		...tests.testerOptions,
		languageOptions: {
			...tests.testerOptions?.languageOptions,
			parserOptions: {
				...tests.testerOptions?.languageOptions?.parserOptions,
				ecmaFeatures: {
					...tests.testerOptions?.languageOptions?.parserOptions?.ecmaFeatures,
					jsx: true,
				},
			},
		},
	},
});

ruleTest.snapshot({
	valid: [
		'const password = 1;',
		'const isInViewport = true;',
		'function unsubscribe() {}',
		'class ViewportState {}',
		'const fileName = "index.js";',
		'const setUp = () => {};',
		'const lookUp = new Map();',
		'const dropDown = element;',
		'const popUp = window.open();',
		'const webSocket = new WebSocket(url);',
		'const sourceMap = parseSourceMap();',
		'const homePage = url;',
		'function HomePage() {}',
		'const runTime = performance.now() - start;',
		'const isOnLine = isOnlyNodeOnLine(node);',
		'const isOffLine = position.column === 0;',
		'const styleSheet = document.styleSheets[0];',
		'const CSSStyleSheetConstructor = CSSStyleSheet;',
		'const superClass = node.superClass;',
		'const superClassName = getSuperClassName(node.superClass);',
		String.raw`const newLine = "\n";`,
		'const VIEW_PORT = 1;',
		'const XMLHttpRequest = 1;',
		'const payload = 1;',
		'const compassWord = 1;',
		'const myViewPortion = 1;',
		'const endPoint = line.end;',
		'const postFix = patch.after;',
		'const preFix = patch.before;',
		'const protoType = schema.type;',
		'const roadMap = atlas.getRoadMap();',
		'const foo_userName = 1;',
		'const version2userName = 1;',
		'class ViewPortion {}',
		'({passWord: 1})',
		'foo.userName = 1;',
		'import userName from "user-name";',
		'import {userName} from "user-name";',
		'const {userName} = object;',
		{
			code: 'const userName = 1;',
			options: [{
				allowList: {
					userName: true,
				},
			}],
		},
		{
			code: 'const passWord = 1;',
			options: [{
				replacements: {
					passWord: false,
				},
			}],
		},
		{
			code: 'const passWord = 1;',
			options: [{
				extendDefaultReplacements: false,
				replacements: {},
			}],
		},
		{
			code: 'const fooBar = 1;',
			options: [{
				extendDefaultReplacements: true,
				replacements: {
					fooBar: false,
				},
			}],
		},
		{
			code: 'navigator.onLine = isOnline;',
			options: checkPropertiesOptions,
		},
		{
			code: 'document.styleSheet = styleSheet;',
			options: checkPropertiesOptions,
		},
		{
			code: 'class Foo { superClass = Base; }',
			options: checkPropertiesOptions,
		},
		{
			code: outdent`
				const username = 1;
				export {username as userName};
			`,
			options: onlyCheckPropertiesOptions,
		},
		{
			code: 'export {default as userName} from "./module.js";',
			options: onlyCheckPropertiesOptions,
		},
		{
			code: 'const options = {"timeOut": 1000};',
			options: checkPropertiesOptions,
		},
		{
			code: 'const styles = {"--tool-tip-color": "red"};',
			options: checkPropertiesOptions,
		},
		{
			code: 'foo[timeOut] = 1;',
			options: onlyCheckPropertiesOptions,
		},
		{
			code: 'const foo = {__proto__: bar};',
			options: [{
				checkProperties: true,
				extendDefaultReplacements: false,
				replacements: {
					__proto: 'prototype',
				},
			}],
		},
	],
	invalid: [
		'const backGround = 1;',
		'const passWord = 1;',
		'const userName = passWord;',
		'let isInViewPort = true;',
		'function unSubscribe() {}',
		'const dataBase = connect();',
		'const payLoad = {};',
		'const placeHolder = "Name";',
		'const preView = render();',
		'const overRide = true;',
		'const callBack = () => {};',
		'const weekEnd = new Date();',
		'const checkBox = element;',
		'const clipBoard = navigator.clipboard;',
		'const codeBase = project.root;',
		'const downLoad = fetchArchive();',
		'const feedBack = getReviewComment();',
		'const foreGround = getActiveWindow();',
		'const frameWork = loadPluginHost();',
		'const headLine = article.title;',
		'const keyBoard = inputDevice;',
		'const keyFrame = animation.frames[0];',
		'const lifeCycle = hooks;',
		'const metaData = new Map();',
		'const midPoint = (start + end) / 2;',
		'const nameSpace = "svg";',
		'const screenShot = await page.screenshot();',
		'const sideBar = document.querySelector(".sidebar");',
		'const subClass = class extends Parent {};',
		'const subDirectory = path.join(directory, "child");',
		'const subDomain = "api";',
		'const subMenu = menu.items[0];',
		'const subProcess = spawn(command);',
		'const subString = value.slice(1);',
		'const subTree = tree.children[0];',
		'const subType = type.kind;',
		'const subTitle = section.subtitle;',
		'const timeOut = 1000;',
		'const timeStamp = Date.now();',
		'const editorToolBar = editor.toolbar;',
		'const toolKit = createToolbox();',
		'const toolTip = button.title;',
		'const touchScreen = matchMedia("(pointer: coarse)");',
		'const underScore = "_";',
		'const upLoad = sendFile(file);',
		'const webCam = await getCamera();',
		'const webHook = createWebhook();',
		'const webSite = new URL(url);',
		'const workSpace = await openWorkspace();',
		'const whiteSpace = " ";',
		'const wildCard = "*";',
		'const workFlow = await loadWorkflow();',
		'const passWordAndUserName = 1;',
		'const myPassWord = 1;',
		'class ViewPortState {}',
		outdent`
			const userName = 'Ada';
			console.log(userName);
		`,
		outdent`
			function getUserName(userName) {
				return userName;
			}
		`,
		{
			code: '({passWord: 1})',
			options: checkPropertiesOptions,
		},
		{
			code: 'foo.userName = 1;',
			options: checkPropertiesOptions,
		},
		{
			code: 'class Foo { viewPort = 1; }',
			options: checkPropertiesOptions,
		},
		{
			code: 'foo.userName++;',
			options: checkPropertiesOptions,
		},
		{
			code: '++foo.userName;',
			options: checkPropertiesOptions,
		},
		{
			code: 'class Foo { #passWord = 1; }',
			options: checkPropertiesOptions,
		},
		{
			code: 'event.timeStamp = Date.now();',
			options: checkPropertiesOptions,
		},
		{
			code: 'element.style.whiteSpace = "pre";',
			options: checkPropertiesOptions,
		},
		'import userName from "./user-name.js";',
		'import * as userName from "./user-name.js";',
		'const userName = require("./user-name.js");',
		{
			code: 'import userName from "user-name";',
			options: checkImportsOptions,
		},
		{
			code: 'import {userName} from "user-name";',
			options: checkImportsOptions,
		},
		{
			code: 'const {userName} = object;',
			options: checkShorthandPropertiesOptions,
		},
		{
			code: 'const fooBar = 1;',
			options: customOptions,
		},
		outdent`
			const username = 1;
			const userName = 2;
			console.log(username, userName);
		`,
		{
			code: outdent`
				foo.userName = 1;
				console.log(foo.userName);
			`,
			options: checkPropertiesOptions,
		},
		{
			code: 'const FooBar = 1;',
			options: [{
				extendDefaultReplacements: false,
				replacements: {
					FooBar: 'Foobar',
				},
			}],
		},
		{
			code: 'const fooBar = 1;',
			options: [{
				extendDefaultReplacements: false,
				replacements: {
					fooBar: 'foo-bar',
				},
			}],
		},
		// Two names with the same replacement in one scope get distinct names.
		{
			code: 'const fooBar = 1;\nconst fooBaz = 2;',
			options: [{
				extendDefaultReplacements: false,
				replacements: {
					fooBar: 'foobar',
					fooBaz: 'foobar',
				},
			}],
		},
		{
			code: 'const $el = 1;',
			options: [{
				extendDefaultReplacements: false,
				replacements: {
					$el: '$element',
				},
			}],
		},
		'const foo = class PassWord {};',
		// The uppercase form of `ıtem` is `Item`, which is not a discouraged name.
		{
			code: 'const fooItem = 1;\nconst ıtem = 2;',
			options: [{
				extendDefaultReplacements: false,
				replacements: {
					ıtem: 'element',
				},
			}],
		},
	],
});

ruleTest.snapshot(withJsx({
	valid: [
		'<input passWord="current" />',
		{
			code: '<input passWord="current" />',
			options: checkPropertiesOptions,
		},
		'<passWord />',
	],
	invalid: [
		outdent`
			const passWord = 'secret';
			const element = <input value={passWord} />;
		`,
		outdent`
			function UserNameField() {}
			const element = <UserNameField />;
		`,
	],
}));

ruleTest.typescript({
	valid: [],
	invalid: [
		{
			code: 'abstract class Foo { abstract viewPort: string; }',
			options: checkPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'abstract class Foo { abstract passWord(): void; }',
			options: checkPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'class Foo { accessor userName = 1; }',
			options: checkPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'class Foo { abstract accessor userName: string; }',
			options: checkPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'class Foo { #passWord = 1; }',
			options: checkPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'interface Foo { userName: string; }',
			options: onlyCheckPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'type Foo = { passWord(): void; }',
			options: onlyCheckPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'class Foo { constructor(private userName: string) {} }',
			options: onlyCheckPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'class Foo { constructor(private userName = "") {} }',
			options: onlyCheckPropertiesOptions,
			errors: [propertyError],
		},
		{
			code: 'class Foo { constructor(private userName: string) {} }',
			options: checkPropertiesOptions,
			errors: [{
				...propertyError,
				suggestions: [{
					messageId: 'consistent-compound-words/rename',
					output: 'class Foo { constructor(private username: string) {} }',
				}],
			}],
		},
		{
			code: 'class Foo { constructor(private userName = "") {} }',
			options: checkPropertiesOptions,
			errors: [{
				...propertyError,
				suggestions: [{
					messageId: 'consistent-compound-words/rename',
					output: 'class Foo { constructor(private username = "") {} }',
				}],
			}],
		},
	],
});

test('validates options schema', t => {
	const linter = new Linter({configType: 'flat'});

	const verify = options => linter.verify('const userName = 1;', {
		languageOptions: {
			ecmaVersion: 'latest',
			sourceType: 'module',
		},
		plugins: {
			unicorn,
		},
		rules: {
			'unicorn/consistent-compound-words': [
				'error',
				options,
			],
		},
	});

	t.assert.throws(
		() => verify({checkDefaultAndNamespaceImports: 'not-internal'}),
		{message: /Value "not-internal" should match some schema in anyOf/u},
	);
	t.assert.throws(
		() => verify({checkShorthandImports: 'not-internal'}),
		{message: /Value "not-internal" should match some schema in anyOf/u},
	);
	t.assert.throws(
		() => verify({replacements: {fooBar: ''}}),
		{message: /Value "" should NOT be shorter than 1 characters/u},
	);
	t.assert.throws(
		() => verify({replacements: {'': 'empty'}}),
		{message: /property name '' is invalid/u},
	);
	t.assert.throws(
		() => verify({allowList: {'': true}}),
		{message: /property name '' is invalid/u},
	);
	t.assert.throws(
		() => verify({allowList: {userName: false}}),
		{message: /Value false should be equal to one of the allowed values/u},
	);
	t.assert.throws(
		() => verify({extendDefaultAllowList: false}),
		{message: /Unexpected property "extendDefaultAllowList"/u},
	);
});

ruleTest.snapshot({
	valid: [languages.json, languages.jsonc, languages.json5].flatMap(language => [
		{code: '{"userName": "backGround"}'},
		{code: '{"username": "userName"}', options: checkPropertiesOptions},
		{code: '{"backGround": 1}', options: [{checkProperties: true, allowList: {backGround: true}}]},
	].map(testCase => ({...testCase, language}))),
	invalid: [languages.json, languages.jsonc, languages.json5].flatMap(language => [
		'{"userName": 1}',
		'{"back-ground": {"data_base": 1}}',
		String.raw`{"back\u0047round": 1}`,
	].map(code => ({code, language, options: checkPropertiesOptions}))),
});

ruleTest.snapshot({
	valid: [
		{code: '.background { --background: red; }'},
		{code: '.backGround {}', options: [{checkVariables: false}]},
		{code: '.back-ground {}', options: [{allowList: {'back-ground': true}}]},
		{code: 'a { background: red; content: "backGround"; }'},
	].map(testCase => ({...testCase, language: languages.css})),
	invalid: [
		'.backGround {}',
		'.back-ground-panel {}',
		'a { --back-ground: var(--data-base); }',
		'@keyframes backGround {}',
		'@keyframes "back-ground" {}',
		'@media (--back-ground) {}',
		'a { container: backGround / inline-size; }',
	].map(code => ({code, language: languages.css})),
});

ruleTest.snapshot({
	valid: [],
	invalid: [{code: '{backGround: 1}', language: languages.json5, options: checkPropertiesOptions}],
});

ruleTest.snapshot({
	valid: [
		{code: 'a { --back-ground: red; }', language: languages.css, options: [{allowList: {'--back-ground': true}}]},
		{code: '.backGround { color: red; }', language: languages.css, options: [{extendDefaultReplacements: false}]},
		{code: '.back-groundwork {}', language: languages.css},
		{code: '.BACKGROUND {}', language: languages.css},
	],
	invalid: [
		{code: '.foo-bar {}', language: languages.css, options: [{extendDefaultReplacements: false, replacements: {fooBar: 'foobar'}}]},
	],
});

ruleTest.snapshot({
	valid: [],
	invalid: [
		'.backGround-panel {}',
		'a { --backGround: red; }',
	].map(code => ({code, language: languages.css, options: [{allowList: {backGround: true}}]})),
});

ruleTest.snapshot({
	valid: [
		{code: 'backGround: userName', language: languages.yaml},
		{code: 'background: userName\n123: backGround\n? [backGround, userName]\n: value', language: languages.yaml, options: checkPropertiesOptions},
		{code: 'backGround = "userName"', language: languages.toml},
		{code: 'background = "backGround"', language: languages.toml, options: checkPropertiesOptions},
		{code: '<div id="background" class="database foreground" title="backGround"></div>', language: languages.html},
		{code: '<div id="backGround" class="dataBase"></div>', language: languages.html, options: [{checkVariables: false}]},
		{code: '<div class="backGround"></div>', language: languages.html, options: [{allowList: {backGround: true}}]},
	],
	invalid: [
		{code: 'backGround: 1\nnested: {data-base: 2}\n"user\\u004Eame": 3', language: languages.yaml, options: checkPropertiesOptions},
		{code: '[backGround."data-base"]\n"user\\u004Eame".callBack = "backGround"', language: languages.toml, options: checkPropertiesOptions},
		{code: '[[backGround]]\nvalue = {data_base = 1}', language: languages.toml, options: checkPropertiesOptions},
		{code: '<div id="backGround" class="good data-base\tcallBack"></div>', language: languages.html},
		{code: '<div ID=backGround CLASS="data&#45;base&#32;userName"></div>', language: languages.html},
		{code: '<div class="backGround-panel"></div>', language: languages.html, options: [{allowList: {backGround: true}}]},
	],
});

ruleTest.snapshot({
	valid: [
		{code: 'a { animation-name: background, "database", none; }'},
		{code: 'a { animation: backGround 1s; }'},
		{code: 'a { animation-name: backGround; }', options: [{checkVariables: false}]},
	].map(testCase => ({...testCase, language: languages.css})),
	invalid: [
		'a { animation-name: backGround; }',
		'a { animation-name: back-ground, "dataBase"; }',
		String.raw`a { animation-name: back\47 round; }`,
		'a { -webkit-animation-name: "back-ground"; }',
	].map(code => ({code, language: languages.css})),
});

ruleTest.snapshot({
	valid: [
		'background: 1',
		'backGround: 1',
		'value: \'backGround\'',
	].map(testCase => ({language: languages.soml, ...(typeof testCase === 'string' ? {code: testCase} : testCase)})),
	invalid: [
		{code: 'backGround: 1', options: [{checkProperties: true}]},
		{code: 'parent.back-ground: 1', options: [{checkProperties: true}]},
		{code: '\'data_base\': {passWord: 1}', options: [{checkProperties: true}]},
	].map(testCase => ({language: languages.soml, ...(typeof testCase === 'string' ? {code: testCase} : testCase)})),
});
