exports[`consistent-compound-words > invalid(1): .backGround {} 1`] = `

  1 | .backGround {}

`;

exports[`consistent-compound-words > invalid(1): .backGround {} 2`] = `

Message:
> 1 | .backGround {}
    | ^^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(1): .backGround-panel {} 1`] = `

Options:
- allowList:
    backGround: true

Code:
  1 | .backGround-panel {}

`;

exports[`consistent-compound-words > invalid(1): .backGround-panel {} 2`] = `

Message:
> 1 | .backGround-panel {}
    | ^^^^^^^^^^^^^^^^^ Prefer \`background-panel\` over \`backGround-panel\`.

`;

exports[`consistent-compound-words > invalid(1): .foo-bar {} 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    fooBar: 'foobar'

Code:
  1 | .foo-bar {}

`;

exports[`consistent-compound-words > invalid(1): .foo-bar {} 2`] = `

Message:
> 1 | .foo-bar {}
    | ^^^^^^^^ Prefer \`foobar\` over \`foo-bar\`.

`;

exports[`consistent-compound-words > invalid(1): a { animation-name: backGround; } 1`] = `

  1 | a { animation-name: backGround; }

`;

exports[`consistent-compound-words > invalid(1): a { animation-name: backGround; } 2`] = `

Message:
> 1 | a { animation-name: backGround; }
    |                     ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(1): backGround: 1 1`] = `

Options:
- checkProperties: true

Code:
  1 | backGround: 1

`;

exports[`consistent-compound-words > invalid(1): backGround: 1 2`] = `

Message:
> 1 | backGround: 1
    | ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(1): backGround: 1\nnested: {data-base: 2}\n\"user\\u004Eame\": 3 1`] = `

Options:
- checkProperties: true

Code:
  1 | backGround: 1
  2 | nested: {data-base: 2}
  3 | "user\\u004Eame": 3

`;

exports[`consistent-compound-words > invalid(1): backGround: 1\nnested: {data-base: 2}\n\"user\\u004Eame\": 3 2`] = `

Message:
> 1 | backGround: 1
    | ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.
  2 | nested: {data-base: 2}
  3 | "user\\u004Eame": 3

`;

exports[`consistent-compound-words > invalid(1): backGround: 1\nnested: {data-base: 2}\n\"user\\u004Eame\": 3 3`] = `

Message:
  1 | backGround: 1
> 2 | nested: {data-base: 2}
    |          ^^^^^^^^^ Prefer \`database\` over \`data-base\`.
  3 | "user\\u004Eame": 3

`;

exports[`consistent-compound-words > invalid(1): backGround: 1\nnested: {data-base: 2}\n\"user\\u004Eame\": 3 4`] = `

Message:
  1 | backGround: 1
  2 | nested: {data-base: 2}
> 3 | "user\\u004Eame": 3
    | ^^^^^^^^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(1): const backGround = 1; 1`] = `

  1 | const backGround = 1;

`;

exports[`consistent-compound-words > invalid(1): const backGround = 1; 2`] = `

Message:
> 1 | const backGround = 1;
    |       ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

Suggestion 1/1: Rename to \`background\`.:
  1 | const background = 1;

`;

exports[`consistent-compound-words > invalid(1): const passWord = 'secret';\nconst element = <input value={passWord} />; 1`] = `

  1 | const passWord = 'secret';
  2 | const element = <input value={passWord} />;

`;

exports[`consistent-compound-words > invalid(1): const passWord = 'secret';\nconst element = <input value={passWord} />; 2`] = `

Message:
> 1 | const passWord = 'secret';
    |       ^^^^^^^^ Prefer \`password\` over \`passWord\`.
  2 | const element = <input value={passWord} />;

Suggestion 1/1: Rename to \`password\`.:
  1 | const password = 'secret';
  2 | const element = <input value={password} />;

`;

exports[`consistent-compound-words > invalid(1): {\"userName\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"userName": 1}

`;

exports[`consistent-compound-words > invalid(1): {\"userName\": 1} 2`] = `

Message:
> 1 | {"userName": 1}
    |  ^^^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(1): {backGround: 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {backGround: 1}

`;

exports[`consistent-compound-words > invalid(1): {backGround: 1} 2`] = `

Message:
> 1 | {backGround: 1}
    |  ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(10): const overRide = true; 1`] = `

  1 | const overRide = true;

`;

exports[`consistent-compound-words > invalid(10): const overRide = true; 2`] = `

Message:
> 1 | const overRide = true;
    |       ^^^^^^^^ Prefer \`override\` over \`overRide\`.

Suggestion 1/1: Rename to \`override\`.:
  1 | const override = true;

`;

exports[`consistent-compound-words > invalid(11): const callBack = () => {}; 1`] = `

  1 | const callBack = () => {};

`;

exports[`consistent-compound-words > invalid(11): const callBack = () => {}; 2`] = `

Message:
> 1 | const callBack = () => {};
    |       ^^^^^^^^ Prefer \`callback\` over \`callBack\`.

Suggestion 1/1: Rename to \`callback\`.:
  1 | const callback = () => {};

`;

exports[`consistent-compound-words > invalid(12): const weekEnd = new Date(); 1`] = `

  1 | const weekEnd = new Date();

`;

exports[`consistent-compound-words > invalid(12): const weekEnd = new Date(); 2`] = `

Message:
> 1 | const weekEnd = new Date();
    |       ^^^^^^^ Prefer \`weekend\` over \`weekEnd\`.

Suggestion 1/1: Rename to \`weekend\`.:
  1 | const weekend = new Date();

`;

exports[`consistent-compound-words > invalid(13): const checkBox = element; 1`] = `

  1 | const checkBox = element;

`;

exports[`consistent-compound-words > invalid(13): const checkBox = element; 2`] = `

Message:
> 1 | const checkBox = element;
    |       ^^^^^^^^ Prefer \`checkbox\` over \`checkBox\`.

Suggestion 1/1: Rename to \`checkbox\`.:
  1 | const checkbox = element;

`;

exports[`consistent-compound-words > invalid(14): const clipBoard = navigator.clipboard; 1`] = `

  1 | const clipBoard = navigator.clipboard;

`;

exports[`consistent-compound-words > invalid(14): const clipBoard = navigator.clipboard; 2`] = `

Message:
> 1 | const clipBoard = navigator.clipboard;
    |       ^^^^^^^^^ Prefer \`clipboard\` over \`clipBoard\`.

Suggestion 1/1: Rename to \`clipboard\`.:
  1 | const clipboard = navigator.clipboard;

`;

exports[`consistent-compound-words > invalid(15): const codeBase = project.root; 1`] = `

  1 | const codeBase = project.root;

`;

exports[`consistent-compound-words > invalid(15): const codeBase = project.root; 2`] = `

Message:
> 1 | const codeBase = project.root;
    |       ^^^^^^^^ Prefer \`codebase\` over \`codeBase\`.

Suggestion 1/1: Rename to \`codebase\`.:
  1 | const codebase = project.root;

`;

exports[`consistent-compound-words > invalid(16): const downLoad = fetchArchive(); 1`] = `

  1 | const downLoad = fetchArchive();

`;

exports[`consistent-compound-words > invalid(16): const downLoad = fetchArchive(); 2`] = `

Message:
> 1 | const downLoad = fetchArchive();
    |       ^^^^^^^^ Prefer \`download\` over \`downLoad\`.

Suggestion 1/1: Rename to \`download\`.:
  1 | const download = fetchArchive();

`;

exports[`consistent-compound-words > invalid(17): const feedBack = getReviewComment(); 1`] = `

  1 | const feedBack = getReviewComment();

`;

exports[`consistent-compound-words > invalid(17): const feedBack = getReviewComment(); 2`] = `

Message:
> 1 | const feedBack = getReviewComment();
    |       ^^^^^^^^ Prefer \`feedback\` over \`feedBack\`.

Suggestion 1/1: Rename to \`feedback\`.:
  1 | const feedback = getReviewComment();

`;

exports[`consistent-compound-words > invalid(18): const foreGround = getActiveWindow(); 1`] = `

  1 | const foreGround = getActiveWindow();

`;

exports[`consistent-compound-words > invalid(18): const foreGround = getActiveWindow(); 2`] = `

Message:
> 1 | const foreGround = getActiveWindow();
    |       ^^^^^^^^^^ Prefer \`foreground\` over \`foreGround\`.

Suggestion 1/1: Rename to \`foreground\`.:
  1 | const foreground = getActiveWindow();

`;

exports[`consistent-compound-words > invalid(19): const frameWork = loadPluginHost(); 1`] = `

  1 | const frameWork = loadPluginHost();

`;

exports[`consistent-compound-words > invalid(19): const frameWork = loadPluginHost(); 2`] = `

Message:
> 1 | const frameWork = loadPluginHost();
    |       ^^^^^^^^^ Prefer \`framework\` over \`frameWork\`.

Suggestion 1/1: Rename to \`framework\`.:
  1 | const framework = loadPluginHost();

`;

exports[`consistent-compound-words > invalid(2): .back-ground-panel {} 1`] = `

  1 | .back-ground-panel {}

`;

exports[`consistent-compound-words > invalid(2): .back-ground-panel {} 2`] = `

Message:
> 1 | .back-ground-panel {}
    | ^^^^^^^^^^^^^^^^^^ Prefer \`background-panel\` over \`back-ground-panel\`.

`;

exports[`consistent-compound-words > invalid(2): [backGround.\"data-base\"]\n\"user\\u004Eame\".callBack = \"backGround\" 1`] = `

Options:
- checkProperties: true

Code:
  1 | [backGround."data-base"]
  2 | "user\\u004Eame".callBack = "backGround"

`;

exports[`consistent-compound-words > invalid(2): [backGround.\"data-base\"]\n\"user\\u004Eame\".callBack = \"backGround\" 2`] = `

Message:
> 1 | [backGround."data-base"]
    |  ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.
  2 | "user\\u004Eame".callBack = "backGround"

`;

exports[`consistent-compound-words > invalid(2): [backGround.\"data-base\"]\n\"user\\u004Eame\".callBack = \"backGround\" 3`] = `

Message:
> 1 | [backGround."data-base"]
    |             ^^^^^^^^^^^ Prefer \`database\` over \`data-base\`.
  2 | "user\\u004Eame".callBack = "backGround"

`;

exports[`consistent-compound-words > invalid(2): [backGround.\"data-base\"]\n\"user\\u004Eame\".callBack = \"backGround\" 4`] = `

Message:
  1 | [backGround."data-base"]
> 2 | "user\\u004Eame".callBack = "backGround"
    | ^^^^^^^^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(2): [backGround.\"data-base\"]\n\"user\\u004Eame\".callBack = \"backGround\" 5`] = `

Message:
  1 | [backGround."data-base"]
> 2 | "user\\u004Eame".callBack = "backGround"
    |                 ^^^^^^^^ Prefer \`callback\` over \`callBack\`.

`;

exports[`consistent-compound-words > invalid(2): a { --backGround: red; } 1`] = `

Options:
- allowList:
    backGround: true

Code:
  1 | a { --backGround: red; }

`;

exports[`consistent-compound-words > invalid(2): a { --backGround: red; } 2`] = `

Message:
> 1 | a { --backGround: red; }
    |     ^^^^^^^^^^^^ Prefer \`--background\` over \`--backGround\`.

`;

exports[`consistent-compound-words > invalid(2): a { animation-name: back-ground, \"dataBase\"; } 1`] = `

  1 | a { animation-name: back-ground, "dataBase"; }

`;

exports[`consistent-compound-words > invalid(2): a { animation-name: back-ground, \"dataBase\"; } 2`] = `

Message:
> 1 | a { animation-name: back-ground, "dataBase"; }
    |                     ^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(2): a { animation-name: back-ground, \"dataBase\"; } 3`] = `

Message:
> 1 | a { animation-name: back-ground, "dataBase"; }
    |                                  ^^^^^^^^^^ Prefer \`database\` over \`dataBase\`.

`;

exports[`consistent-compound-words > invalid(2): const passWord = 1; 1`] = `

  1 | const passWord = 1;

`;

exports[`consistent-compound-words > invalid(2): const passWord = 1; 2`] = `

Message:
> 1 | const passWord = 1;
    |       ^^^^^^^^ Prefer \`password\` over \`passWord\`.

Suggestion 1/1: Rename to \`password\`.:
  1 | const password = 1;

`;

exports[`consistent-compound-words > invalid(2): function UserNameField() {}\nconst element = <UserNameField />; 1`] = `

  1 | function UserNameField() {}
  2 | const element = <UserNameField />;

`;

exports[`consistent-compound-words > invalid(2): function UserNameField() {}\nconst element = <UserNameField />; 2`] = `

Message:
> 1 | function UserNameField() {}
    |          ^^^^^^^^^^^^^ Prefer \`UsernameField\` over \`UserNameField\`.
  2 | const element = <UserNameField />;

`;

exports[`consistent-compound-words > invalid(2): parent.back-ground: 1 1`] = `

Options:
- checkProperties: true

Code:
  1 | parent.back-ground: 1

`;

exports[`consistent-compound-words > invalid(2): parent.back-ground: 1 2`] = `

Message:
> 1 | parent.back-ground: 1
    |        ^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(2): {\"back-ground\": {\"data_base\": 1}} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"back-ground": {"data_base": 1}}

`;

exports[`consistent-compound-words > invalid(2): {\"back-ground\": {\"data_base\": 1}} 2`] = `

Message:
> 1 | {"back-ground": {"data_base": 1}}
    |  ^^^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(2): {\"back-ground\": {\"data_base\": 1}} 3`] = `

Message:
> 1 | {"back-ground": {"data_base": 1}}
    |                  ^^^^^^^^^^^ Prefer \`database\` over \`data_base\`.

`;

exports[`consistent-compound-words > invalid(20): const headLine = article.title; 1`] = `

  1 | const headLine = article.title;

`;

exports[`consistent-compound-words > invalid(20): const headLine = article.title; 2`] = `

Message:
> 1 | const headLine = article.title;
    |       ^^^^^^^^ Prefer \`headline\` over \`headLine\`.

Suggestion 1/1: Rename to \`headline\`.:
  1 | const headline = article.title;

`;

exports[`consistent-compound-words > invalid(21): const keyBoard = inputDevice; 1`] = `

  1 | const keyBoard = inputDevice;

`;

exports[`consistent-compound-words > invalid(21): const keyBoard = inputDevice; 2`] = `

Message:
> 1 | const keyBoard = inputDevice;
    |       ^^^^^^^^ Prefer \`keyboard\` over \`keyBoard\`.

Suggestion 1/1: Rename to \`keyboard\`.:
  1 | const keyboard = inputDevice;

`;

exports[`consistent-compound-words > invalid(22): const keyFrame = animation.frames[0]; 1`] = `

  1 | const keyFrame = animation.frames[0];

`;

exports[`consistent-compound-words > invalid(22): const keyFrame = animation.frames[0]; 2`] = `

Message:
> 1 | const keyFrame = animation.frames[0];
    |       ^^^^^^^^ Prefer \`keyframe\` over \`keyFrame\`.

Suggestion 1/1: Rename to \`keyframe\`.:
  1 | const keyframe = animation.frames[0];

`;

exports[`consistent-compound-words > invalid(23): const lifeCycle = hooks; 1`] = `

  1 | const lifeCycle = hooks;

`;

exports[`consistent-compound-words > invalid(23): const lifeCycle = hooks; 2`] = `

Message:
> 1 | const lifeCycle = hooks;
    |       ^^^^^^^^^ Prefer \`lifecycle\` over \`lifeCycle\`.

Suggestion 1/1: Rename to \`lifecycle\`.:
  1 | const lifecycle = hooks;

`;

exports[`consistent-compound-words > invalid(24): const metaData = new Map(); 1`] = `

  1 | const metaData = new Map();

`;

exports[`consistent-compound-words > invalid(24): const metaData = new Map(); 2`] = `

Message:
> 1 | const metaData = new Map();
    |       ^^^^^^^^ Prefer \`metadata\` over \`metaData\`.

Suggestion 1/1: Rename to \`metadata\`.:
  1 | const metadata = new Map();

`;

exports[`consistent-compound-words > invalid(25): const midPoint = (start + end) / 2; 1`] = `

  1 | const midPoint = (start + end) / 2;

`;

exports[`consistent-compound-words > invalid(25): const midPoint = (start + end) / 2; 2`] = `

Message:
> 1 | const midPoint = (start + end) / 2;
    |       ^^^^^^^^ Prefer \`midpoint\` over \`midPoint\`.

Suggestion 1/1: Rename to \`midpoint\`.:
  1 | const midpoint = (start + end) / 2;

`;

exports[`consistent-compound-words > invalid(26): const nameSpace = \"svg\"; 1`] = `

  1 | const nameSpace = "svg";

`;

exports[`consistent-compound-words > invalid(26): const nameSpace = \"svg\"; 2`] = `

Message:
> 1 | const nameSpace = "svg";
    |       ^^^^^^^^^ Prefer \`namespace\` over \`nameSpace\`.

Suggestion 1/1: Rename to \`namespace\`.:
  1 | const namespace = "svg";

`;

exports[`consistent-compound-words > invalid(27): const screenShot = await page.screenshot(); 1`] = `

  1 | const screenShot = await page.screenshot();

`;

exports[`consistent-compound-words > invalid(27): const screenShot = await page.screenshot(); 2`] = `

Message:
> 1 | const screenShot = await page.screenshot();
    |       ^^^^^^^^^^ Prefer \`screenshot\` over \`screenShot\`.

Suggestion 1/1: Rename to \`screenshot\`.:
  1 | const screenshot = await page.screenshot();

`;

exports[`consistent-compound-words > invalid(28): const sideBar = document.querySelector(\".sidebar\"); 1`] = `

  1 | const sideBar = document.querySelector(".sidebar");

`;

exports[`consistent-compound-words > invalid(28): const sideBar = document.querySelector(\".sidebar\"); 2`] = `

Message:
> 1 | const sideBar = document.querySelector(".sidebar");
    |       ^^^^^^^ Prefer \`sidebar\` over \`sideBar\`.

Suggestion 1/1: Rename to \`sidebar\`.:
  1 | const sidebar = document.querySelector(".sidebar");

`;

exports[`consistent-compound-words > invalid(29): const subClass = class extends Parent {}; 1`] = `

  1 | const subClass = class extends Parent {};

`;

exports[`consistent-compound-words > invalid(29): const subClass = class extends Parent {}; 2`] = `

Message:
> 1 | const subClass = class extends Parent {};
    |       ^^^^^^^^ Prefer \`subclass\` over \`subClass\`.

Suggestion 1/1: Rename to \`subclass\`.:
  1 | const subclass = class extends Parent {};

`;

exports[`consistent-compound-words > invalid(3): 'data_base': {passWord: 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | 'data_base': {passWord: 1}

`;

exports[`consistent-compound-words > invalid(3): 'data_base': {passWord: 1} 2`] = `

Message:
> 1 | 'data_base': {passWord: 1}
    | ^^^^^^^^^^^ Prefer \`database\` over \`data_base\`.

`;

exports[`consistent-compound-words > invalid(3): 'data_base': {passWord: 1} 3`] = `

Message:
> 1 | 'data_base': {passWord: 1}
    |               ^^^^^^^^ Prefer \`password\` over \`passWord\`.

`;

exports[`consistent-compound-words > invalid(3): [[backGround]]\nvalue = {data_base = 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | [[backGround]]
  2 | value = {data_base = 1}

`;

exports[`consistent-compound-words > invalid(3): [[backGround]]\nvalue = {data_base = 1} 2`] = `

Message:
> 1 | [[backGround]]
    |   ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.
  2 | value = {data_base = 1}

`;

exports[`consistent-compound-words > invalid(3): [[backGround]]\nvalue = {data_base = 1} 3`] = `

Message:
  1 | [[backGround]]
> 2 | value = {data_base = 1}
    |          ^^^^^^^^^ Prefer \`database\` over \`data_base\`.

`;

exports[`consistent-compound-words > invalid(3): a { --back-ground: var(--data-base); } 1`] = `

  1 | a { --back-ground: var(--data-base); }

`;

exports[`consistent-compound-words > invalid(3): a { --back-ground: var(--data-base); } 2`] = `

Message:
> 1 | a { --back-ground: var(--data-base); }
    |     ^^^^^^^^^^^^^ Prefer \`--background\` over \`--back-ground\`.

`;

exports[`consistent-compound-words > invalid(3): a { --back-ground: var(--data-base); } 3`] = `

Message:
> 1 | a { --back-ground: var(--data-base); }
    |                        ^^^^^^^^^^^ Prefer \`--database\` over \`--data-base\`.

`;

exports[`consistent-compound-words > invalid(3): a { animation-name: back\\47 round; } 1`] = `

  1 | a { animation-name: back\\47 round; }

`;

exports[`consistent-compound-words > invalid(3): a { animation-name: back\\47 round; } 2`] = `

Message:
> 1 | a { animation-name: back\\47 round; }
    |                     ^^^^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(3): const userName = passWord; 1`] = `

  1 | const userName = passWord;

`;

exports[`consistent-compound-words > invalid(3): const userName = passWord; 2`] = `

Message:
> 1 | const userName = passWord;
    |       ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | const username = passWord;

`;

exports[`consistent-compound-words > invalid(3): {\"back\\u0047round\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"back\\u0047round": 1}

`;

exports[`consistent-compound-words > invalid(3): {\"back\\u0047round\": 1} 2`] = `

Message:
> 1 | {"back\\u0047round": 1}
    |  ^^^^^^^^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(30): const subDirectory = path.join(directory, \"child\"); 1`] = `

  1 | const subDirectory = path.join(directory, "child");

`;

exports[`consistent-compound-words > invalid(30): const subDirectory = path.join(directory, \"child\"); 2`] = `

Message:
> 1 | const subDirectory = path.join(directory, "child");
    |       ^^^^^^^^^^^^ Prefer \`subdirectory\` over \`subDirectory\`.

Suggestion 1/1: Rename to \`subdirectory\`.:
  1 | const subdirectory = path.join(directory, "child");

`;

exports[`consistent-compound-words > invalid(31): const subDomain = \"api\"; 1`] = `

  1 | const subDomain = "api";

`;

exports[`consistent-compound-words > invalid(31): const subDomain = \"api\"; 2`] = `

Message:
> 1 | const subDomain = "api";
    |       ^^^^^^^^^ Prefer \`subdomain\` over \`subDomain\`.

Suggestion 1/1: Rename to \`subdomain\`.:
  1 | const subdomain = "api";

`;

exports[`consistent-compound-words > invalid(32): const subMenu = menu.items[0]; 1`] = `

  1 | const subMenu = menu.items[0];

`;

exports[`consistent-compound-words > invalid(32): const subMenu = menu.items[0]; 2`] = `

Message:
> 1 | const subMenu = menu.items[0];
    |       ^^^^^^^ Prefer \`submenu\` over \`subMenu\`.

Suggestion 1/1: Rename to \`submenu\`.:
  1 | const submenu = menu.items[0];

`;

exports[`consistent-compound-words > invalid(33): const subProcess = spawn(command); 1`] = `

  1 | const subProcess = spawn(command);

`;

exports[`consistent-compound-words > invalid(33): const subProcess = spawn(command); 2`] = `

Message:
> 1 | const subProcess = spawn(command);
    |       ^^^^^^^^^^ Prefer \`subprocess\` over \`subProcess\`.

Suggestion 1/1: Rename to \`subprocess\`.:
  1 | const subprocess = spawn(command);

`;

exports[`consistent-compound-words > invalid(34): const subString = value.slice(1); 1`] = `

  1 | const subString = value.slice(1);

`;

exports[`consistent-compound-words > invalid(34): const subString = value.slice(1); 2`] = `

Message:
> 1 | const subString = value.slice(1);
    |       ^^^^^^^^^ Prefer \`substring\` over \`subString\`.

Suggestion 1/1: Rename to \`substring\`.:
  1 | const substring = value.slice(1);

`;

exports[`consistent-compound-words > invalid(35): const subTree = tree.children[0]; 1`] = `

  1 | const subTree = tree.children[0];

`;

exports[`consistent-compound-words > invalid(35): const subTree = tree.children[0]; 2`] = `

Message:
> 1 | const subTree = tree.children[0];
    |       ^^^^^^^ Prefer \`subtree\` over \`subTree\`.

Suggestion 1/1: Rename to \`subtree\`.:
  1 | const subtree = tree.children[0];

`;

exports[`consistent-compound-words > invalid(36): const subType = type.kind; 1`] = `

  1 | const subType = type.kind;

`;

exports[`consistent-compound-words > invalid(36): const subType = type.kind; 2`] = `

Message:
> 1 | const subType = type.kind;
    |       ^^^^^^^ Prefer \`subtype\` over \`subType\`.

Suggestion 1/1: Rename to \`subtype\`.:
  1 | const subtype = type.kind;

`;

exports[`consistent-compound-words > invalid(37): const subTitle = section.subtitle; 1`] = `

  1 | const subTitle = section.subtitle;

`;

exports[`consistent-compound-words > invalid(37): const subTitle = section.subtitle; 2`] = `

Message:
> 1 | const subTitle = section.subtitle;
    |       ^^^^^^^^ Prefer \`subtitle\` over \`subTitle\`.

Suggestion 1/1: Rename to \`subtitle\`.:
  1 | const subtitle = section.subtitle;

`;

exports[`consistent-compound-words > invalid(38): const timeOut = 1000; 1`] = `

  1 | const timeOut = 1000;

`;

exports[`consistent-compound-words > invalid(38): const timeOut = 1000; 2`] = `

Message:
> 1 | const timeOut = 1000;
    |       ^^^^^^^ Prefer \`timeout\` over \`timeOut\`.

Suggestion 1/1: Rename to \`timeout\`.:
  1 | const timeout = 1000;

`;

exports[`consistent-compound-words > invalid(39): const timeStamp = Date.now(); 1`] = `

  1 | const timeStamp = Date.now();

`;

exports[`consistent-compound-words > invalid(39): const timeStamp = Date.now(); 2`] = `

Message:
> 1 | const timeStamp = Date.now();
    |       ^^^^^^^^^ Prefer \`timestamp\` over \`timeStamp\`.

Suggestion 1/1: Rename to \`timestamp\`.:
  1 | const timestamp = Date.now();

`;

exports[`consistent-compound-words > invalid(4): <div id=\"backGround\" class=\"good data-base\tcallBack\"></div> 1`] = `

  1 | <div id="backGround" class="good data-base	callBack"></div>

`;

exports[`consistent-compound-words > invalid(4): <div id=\"backGround\" class=\"good data-base\tcallBack\"></div> 2`] = `

Message:
> 1 | <div id="backGround" class="good data-base	callBack"></div>
    |          ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(4): <div id=\"backGround\" class=\"good data-base\tcallBack\"></div> 3`] = `

Message:
> 1 | <div id="backGround" class="good data-base	callBack"></div>
    |                                  ^^^^^^^^^ Prefer \`database\` over \`data-base\`.

`;

exports[`consistent-compound-words > invalid(4): <div id=\"backGround\" class=\"good data-base\tcallBack\"></div> 4`] = `

Message:
> 1 | <div id="backGround" class="good data-base	callBack"></div>
    |                                           	^^^^^^^^ Prefer \`callback\` over \`callBack\`.

`;

exports[`consistent-compound-words > invalid(4): @keyframes backGround {} 1`] = `

  1 | @keyframes backGround {}

`;

exports[`consistent-compound-words > invalid(4): @keyframes backGround {} 2`] = `

Message:
> 1 | @keyframes backGround {}
    |            ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(4): a { -webkit-animation-name: \"back-ground\"; } 1`] = `

  1 | a { -webkit-animation-name: "back-ground"; }

`;

exports[`consistent-compound-words > invalid(4): a { -webkit-animation-name: \"back-ground\"; } 2`] = `

Message:
> 1 | a { -webkit-animation-name: "back-ground"; }
    |                             ^^^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(4): let isInViewPort = true; 1`] = `

  1 | let isInViewPort = true;

`;

exports[`consistent-compound-words > invalid(4): let isInViewPort = true; 2`] = `

Message:
> 1 | let isInViewPort = true;
    |     ^^^^^^^^^^^^ Prefer \`isInViewport\` over \`isInViewPort\`.

Suggestion 1/1: Rename to \`isInViewport\`.:
  1 | let isInViewport = true;

`;

exports[`consistent-compound-words > invalid(4): {\"userName\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"userName": 1}

`;

exports[`consistent-compound-words > invalid(4): {\"userName\": 1} 2`] = `

Message:
> 1 | {"userName": 1}
    |  ^^^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(40): const editorToolBar = editor.toolbar; 1`] = `

  1 | const editorToolBar = editor.toolbar;

`;

exports[`consistent-compound-words > invalid(40): const editorToolBar = editor.toolbar; 2`] = `

Message:
> 1 | const editorToolBar = editor.toolbar;
    |       ^^^^^^^^^^^^^ Prefer \`editorToolbar\` over \`editorToolBar\`.

Suggestion 1/1: Rename to \`editorToolbar\`.:
  1 | const editorToolbar = editor.toolbar;

`;

exports[`consistent-compound-words > invalid(41): const toolKit = createToolbox(); 1`] = `

  1 | const toolKit = createToolbox();

`;

exports[`consistent-compound-words > invalid(41): const toolKit = createToolbox(); 2`] = `

Message:
> 1 | const toolKit = createToolbox();
    |       ^^^^^^^ Prefer \`toolkit\` over \`toolKit\`.

Suggestion 1/1: Rename to \`toolkit\`.:
  1 | const toolkit = createToolbox();

`;

exports[`consistent-compound-words > invalid(42): const toolTip = button.title; 1`] = `

  1 | const toolTip = button.title;

`;

exports[`consistent-compound-words > invalid(42): const toolTip = button.title; 2`] = `

Message:
> 1 | const toolTip = button.title;
    |       ^^^^^^^ Prefer \`tooltip\` over \`toolTip\`.

Suggestion 1/1: Rename to \`tooltip\`.:
  1 | const tooltip = button.title;

`;

exports[`consistent-compound-words > invalid(43): const touchScreen = matchMedia(\"(pointer: coarse)\"); 1`] = `

  1 | const touchScreen = matchMedia("(pointer: coarse)");

`;

exports[`consistent-compound-words > invalid(43): const touchScreen = matchMedia(\"(pointer: coarse)\"); 2`] = `

Message:
> 1 | const touchScreen = matchMedia("(pointer: coarse)");
    |       ^^^^^^^^^^^ Prefer \`touchscreen\` over \`touchScreen\`.

Suggestion 1/1: Rename to \`touchscreen\`.:
  1 | const touchscreen = matchMedia("(pointer: coarse)");

`;

exports[`consistent-compound-words > invalid(44): const underScore = \"_\"; 1`] = `

  1 | const underScore = "_";

`;

exports[`consistent-compound-words > invalid(44): const underScore = \"_\"; 2`] = `

Message:
> 1 | const underScore = "_";
    |       ^^^^^^^^^^ Prefer \`underscore\` over \`underScore\`.

Suggestion 1/1: Rename to \`underscore\`.:
  1 | const underscore = "_";

`;

exports[`consistent-compound-words > invalid(45): const upLoad = sendFile(file); 1`] = `

  1 | const upLoad = sendFile(file);

`;

exports[`consistent-compound-words > invalid(45): const upLoad = sendFile(file); 2`] = `

Message:
> 1 | const upLoad = sendFile(file);
    |       ^^^^^^ Prefer \`upload\` over \`upLoad\`.

Suggestion 1/1: Rename to \`upload\`.:
  1 | const upload = sendFile(file);

`;

exports[`consistent-compound-words > invalid(46): const webCam = await getCamera(); 1`] = `

  1 | const webCam = await getCamera();

`;

exports[`consistent-compound-words > invalid(46): const webCam = await getCamera(); 2`] = `

Message:
> 1 | const webCam = await getCamera();
    |       ^^^^^^ Prefer \`webcam\` over \`webCam\`.

Suggestion 1/1: Rename to \`webcam\`.:
  1 | const webcam = await getCamera();

`;

exports[`consistent-compound-words > invalid(47): const webHook = createWebhook(); 1`] = `

  1 | const webHook = createWebhook();

`;

exports[`consistent-compound-words > invalid(47): const webHook = createWebhook(); 2`] = `

Message:
> 1 | const webHook = createWebhook();
    |       ^^^^^^^ Prefer \`webhook\` over \`webHook\`.

Suggestion 1/1: Rename to \`webhook\`.:
  1 | const webhook = createWebhook();

`;

exports[`consistent-compound-words > invalid(48): const webSite = new URL(url); 1`] = `

  1 | const webSite = new URL(url);

`;

exports[`consistent-compound-words > invalid(48): const webSite = new URL(url); 2`] = `

Message:
> 1 | const webSite = new URL(url);
    |       ^^^^^^^ Prefer \`website\` over \`webSite\`.

Suggestion 1/1: Rename to \`website\`.:
  1 | const website = new URL(url);

`;

exports[`consistent-compound-words > invalid(49): const workSpace = await openWorkspace(); 1`] = `

  1 | const workSpace = await openWorkspace();

`;

exports[`consistent-compound-words > invalid(49): const workSpace = await openWorkspace(); 2`] = `

Message:
> 1 | const workSpace = await openWorkspace();
    |       ^^^^^^^^^ Prefer \`workspace\` over \`workSpace\`.

Suggestion 1/1: Rename to \`workspace\`.:
  1 | const workspace = await openWorkspace();

`;

exports[`consistent-compound-words > invalid(5): <div ID=backGround CLASS=\"data&#45;base&#32;userName\"></div> 1`] = `

  1 | <div ID=backGround CLASS="data&#45;base&#32;userName"></div>

`;

exports[`consistent-compound-words > invalid(5): <div ID=backGround CLASS=\"data&#45;base&#32;userName\"></div> 2`] = `

Message:
> 1 | <div ID=backGround CLASS="data&#45;base&#32;userName"></div>
    |         ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(5): <div ID=backGround CLASS=\"data&#45;base&#32;userName\"></div> 3`] = `

Message:
> 1 | <div ID=backGround CLASS="data&#45;base&#32;userName"></div>
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`database\` over \`data-base\`.

`;

exports[`consistent-compound-words > invalid(5): <div ID=backGround CLASS=\"data&#45;base&#32;userName\"></div> 4`] = `

Message:
> 1 | <div ID=backGround CLASS="data&#45;base&#32;userName"></div>
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(5): @keyframes \"back-ground\" {} 1`] = `

  1 | @keyframes "back-ground" {}

`;

exports[`consistent-compound-words > invalid(5): @keyframes \"back-ground\" {} 2`] = `

Message:
> 1 | @keyframes "back-ground" {}
    |            ^^^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(5): function unSubscribe() {} 1`] = `

  1 | function unSubscribe() {}

`;

exports[`consistent-compound-words > invalid(5): function unSubscribe() {} 2`] = `

Message:
> 1 | function unSubscribe() {}
    |          ^^^^^^^^^^^ Prefer \`unsubscribe\` over \`unSubscribe\`.

Suggestion 1/1: Rename to \`unsubscribe\`.:
  1 | function unsubscribe() {}

`;

exports[`consistent-compound-words > invalid(5): {\"back-ground\": {\"data_base\": 1}} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"back-ground": {"data_base": 1}}

`;

exports[`consistent-compound-words > invalid(5): {\"back-ground\": {\"data_base\": 1}} 2`] = `

Message:
> 1 | {"back-ground": {"data_base": 1}}
    |  ^^^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(5): {\"back-ground\": {\"data_base\": 1}} 3`] = `

Message:
> 1 | {"back-ground": {"data_base": 1}}
    |                  ^^^^^^^^^^^ Prefer \`database\` over \`data_base\`.

`;

exports[`consistent-compound-words > invalid(50): const whiteSpace = \" \"; 1`] = `

  1 | const whiteSpace = " ";

`;

exports[`consistent-compound-words > invalid(50): const whiteSpace = \" \"; 2`] = `

Message:
> 1 | const whiteSpace = " ";
    |       ^^^^^^^^^^ Prefer \`whitespace\` over \`whiteSpace\`.

Suggestion 1/1: Rename to \`whitespace\`.:
  1 | const whitespace = " ";

`;

exports[`consistent-compound-words > invalid(51): const wildCard = \"*\"; 1`] = `

  1 | const wildCard = "*";

`;

exports[`consistent-compound-words > invalid(51): const wildCard = \"*\"; 2`] = `

Message:
> 1 | const wildCard = "*";
    |       ^^^^^^^^ Prefer \`wildcard\` over \`wildCard\`.

Suggestion 1/1: Rename to \`wildcard\`.:
  1 | const wildcard = "*";

`;

exports[`consistent-compound-words > invalid(52): const workFlow = await loadWorkflow(); 1`] = `

  1 | const workFlow = await loadWorkflow();

`;

exports[`consistent-compound-words > invalid(52): const workFlow = await loadWorkflow(); 2`] = `

Message:
> 1 | const workFlow = await loadWorkflow();
    |       ^^^^^^^^ Prefer \`workflow\` over \`workFlow\`.

Suggestion 1/1: Rename to \`workflow\`.:
  1 | const workflow = await loadWorkflow();

`;

exports[`consistent-compound-words > invalid(53): const passWordAndUserName = 1; 1`] = `

  1 | const passWordAndUserName = 1;

`;

exports[`consistent-compound-words > invalid(53): const passWordAndUserName = 1; 2`] = `

Message:
> 1 | const passWordAndUserName = 1;
    |       ^^^^^^^^^^^^^^^^^^^ Prefer \`passwordAndUsername\` over \`passWordAndUserName\`.

Suggestion 1/1: Rename to \`passwordAndUsername\`.:
  1 | const passwordAndUsername = 1;

`;

exports[`consistent-compound-words > invalid(54): const myPassWord = 1; 1`] = `

  1 | const myPassWord = 1;

`;

exports[`consistent-compound-words > invalid(54): const myPassWord = 1; 2`] = `

Message:
> 1 | const myPassWord = 1;
    |       ^^^^^^^^^^ Prefer \`myPassword\` over \`myPassWord\`.

Suggestion 1/1: Rename to \`myPassword\`.:
  1 | const myPassword = 1;

`;

exports[`consistent-compound-words > invalid(55): class ViewPortState {} 1`] = `

  1 | class ViewPortState {}

`;

exports[`consistent-compound-words > invalid(55): class ViewPortState {} 2`] = `

Message:
> 1 | class ViewPortState {}
    |       ^^^^^^^^^^^^^ Prefer \`ViewportState\` over \`ViewPortState\`.

Suggestion 1/1: Rename to \`ViewportState\`.:
  1 | class ViewportState {}

`;

exports[`consistent-compound-words > invalid(56): const userName = 'Ada';\nconsole.log(userName); 1`] = `

  1 | const userName = 'Ada';
  2 | console.log(userName);

`;

exports[`consistent-compound-words > invalid(56): const userName = 'Ada';\nconsole.log(userName); 2`] = `

Message:
> 1 | const userName = 'Ada';
    |       ^^^^^^^^ Prefer \`username\` over \`userName\`.
  2 | console.log(userName);

Suggestion 1/1: Rename to \`username\`.:
  1 | const username = 'Ada';
  2 | console.log(username);

`;

exports[`consistent-compound-words > invalid(57): function getUserName(userName) {\n\treturn userName;\n} 1`] = `

  1 | function getUserName(userName) {
  2 | 	return userName;
  3 | }

`;

exports[`consistent-compound-words > invalid(57): function getUserName(userName) {\n\treturn userName;\n} 2`] = `

Message:
> 1 | function getUserName(userName) {
    |          ^^^^^^^^^^^ Prefer \`getUsername\` over \`getUserName\`.
  2 | 	return userName;
  3 | }

Suggestion 1/1: Rename to \`getUsername\`.:
  1 | function getUsername(userName) {
  2 | 	return userName;
  3 | }

`;

exports[`consistent-compound-words > invalid(57): function getUserName(userName) {\n\treturn userName;\n} 3`] = `

Message:
> 1 | function getUserName(userName) {
    |                      ^^^^^^^^ Prefer \`username\` over \`userName\`.
  2 | 	return userName;
  3 | }

Suggestion 1/1: Rename to \`username\`.:
  1 | function getUserName(username) {
  2 | 	return username;
  3 | }

`;

exports[`consistent-compound-words > invalid(58): ({passWord: 1}) 1`] = `

Options:
- checkProperties: true

Code:
  1 | ({passWord: 1})

`;

exports[`consistent-compound-words > invalid(58): ({passWord: 1}) 2`] = `

Message:
> 1 | ({passWord: 1})
    |   ^^^^^^^^ Prefer \`password\` over \`passWord\`.

`;

exports[`consistent-compound-words > invalid(59): foo.userName = 1; 1`] = `

Options:
- checkProperties: true

Code:
  1 | foo.userName = 1;

`;

exports[`consistent-compound-words > invalid(59): foo.userName = 1; 2`] = `

Message:
> 1 | foo.userName = 1;
    |     ^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(6): <div class=\"backGround-panel\"></div> 1`] = `

Options:
- allowList:
    backGround: true

Code:
  1 | <div class="backGround-panel"></div>

`;

exports[`consistent-compound-words > invalid(6): <div class=\"backGround-panel\"></div> 2`] = `

Message:
> 1 | <div class="backGround-panel"></div>
    |             ^^^^^^^^^^^^^^^^ Prefer \`background-panel\` over \`backGround-panel\`.

`;

exports[`consistent-compound-words > invalid(6): @media (--back-ground) {} 1`] = `

  1 | @media (--back-ground) {}

`;

exports[`consistent-compound-words > invalid(6): @media (--back-ground) {} 2`] = `

Message:
> 1 | @media (--back-ground) {}
    |         ^^^^^^^^^^^^^ Prefer \`--background\` over \`--back-ground\`.

`;

exports[`consistent-compound-words > invalid(6): const dataBase = connect(); 1`] = `

  1 | const dataBase = connect();

`;

exports[`consistent-compound-words > invalid(6): const dataBase = connect(); 2`] = `

Message:
> 1 | const dataBase = connect();
    |       ^^^^^^^^ Prefer \`database\` over \`dataBase\`.

Suggestion 1/1: Rename to \`database\`.:
  1 | const database = connect();

`;

exports[`consistent-compound-words > invalid(6): {\"back\\u0047round\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"back\\u0047round": 1}

`;

exports[`consistent-compound-words > invalid(6): {\"back\\u0047round\": 1} 2`] = `

Message:
> 1 | {"back\\u0047round": 1}
    |  ^^^^^^^^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(60): class Foo { viewPort = 1; } 1`] = `

Options:
- checkProperties: true

Code:
  1 | class Foo { viewPort = 1; }

`;

exports[`consistent-compound-words > invalid(60): class Foo { viewPort = 1; } 2`] = `

Message:
> 1 | class Foo { viewPort = 1; }
    |             ^^^^^^^^ Prefer \`viewport\` over \`viewPort\`.

`;

exports[`consistent-compound-words > invalid(61): foo.userName++; 1`] = `

Options:
- checkProperties: true

Code:
  1 | foo.userName++;

`;

exports[`consistent-compound-words > invalid(61): foo.userName++; 2`] = `

Message:
> 1 | foo.userName++;
    |     ^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(62): ++foo.userName; 1`] = `

Options:
- checkProperties: true

Code:
  1 | ++foo.userName;

`;

exports[`consistent-compound-words > invalid(62): ++foo.userName; 2`] = `

Message:
> 1 | ++foo.userName;
    |       ^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(63): class Foo { #passWord = 1; } 1`] = `

Options:
- checkProperties: true

Code:
  1 | class Foo { #passWord = 1; }

`;

exports[`consistent-compound-words > invalid(63): class Foo { #passWord = 1; } 2`] = `

Message:
> 1 | class Foo { #passWord = 1; }
    |             ^^^^^^^^^ Prefer \`password\` over \`passWord\`.

`;

exports[`consistent-compound-words > invalid(64): event.timeStamp = Date.now(); 1`] = `

Options:
- checkProperties: true

Code:
  1 | event.timeStamp = Date.now();

`;

exports[`consistent-compound-words > invalid(64): event.timeStamp = Date.now(); 2`] = `

Message:
> 1 | event.timeStamp = Date.now();
    |       ^^^^^^^^^ Prefer \`timestamp\` over \`timeStamp\`.

`;

exports[`consistent-compound-words > invalid(65): element.style.whiteSpace = \"pre\"; 1`] = `

Options:
- checkProperties: true

Code:
  1 | element.style.whiteSpace = "pre";

`;

exports[`consistent-compound-words > invalid(65): element.style.whiteSpace = \"pre\"; 2`] = `

Message:
> 1 | element.style.whiteSpace = "pre";
    |               ^^^^^^^^^^ Prefer \`whitespace\` over \`whiteSpace\`.

`;

exports[`consistent-compound-words > invalid(66): import userName from \"./user-name.js\"; 1`] = `

  1 | import userName from "./user-name.js";

`;

exports[`consistent-compound-words > invalid(66): import userName from \"./user-name.js\"; 2`] = `

Message:
> 1 | import userName from "./user-name.js";
    |        ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | import username from "./user-name.js";

`;

exports[`consistent-compound-words > invalid(67): import * as userName from \"./user-name.js\"; 1`] = `

  1 | import * as userName from "./user-name.js";

`;

exports[`consistent-compound-words > invalid(67): import * as userName from \"./user-name.js\"; 2`] = `

Message:
> 1 | import * as userName from "./user-name.js";
    |             ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | import * as username from "./user-name.js";

`;

exports[`consistent-compound-words > invalid(68): const userName = require(\"./user-name.js\"); 1`] = `

  1 | const userName = require("./user-name.js");

`;

exports[`consistent-compound-words > invalid(68): const userName = require(\"./user-name.js\"); 2`] = `

Message:
> 1 | const userName = require("./user-name.js");
    |       ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | const username = require("./user-name.js");

`;

exports[`consistent-compound-words > invalid(69): import userName from \"user-name\"; 1`] = `

Options:
- checkDefaultAndNamespaceImports: true
  checkShorthandImports: true

Code:
  1 | import userName from "user-name";

`;

exports[`consistent-compound-words > invalid(69): import userName from \"user-name\"; 2`] = `

Message:
> 1 | import userName from "user-name";
    |        ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | import username from "user-name";

`;

exports[`consistent-compound-words > invalid(7): a { container: backGround / inline-size; } 1`] = `

  1 | a { container: backGround / inline-size; }

`;

exports[`consistent-compound-words > invalid(7): a { container: backGround / inline-size; } 2`] = `

Message:
> 1 | a { container: backGround / inline-size; }
    |                ^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;

exports[`consistent-compound-words > invalid(7): const payLoad = {}; 1`] = `

  1 | const payLoad = {};

`;

exports[`consistent-compound-words > invalid(7): const payLoad = {}; 2`] = `

Message:
> 1 | const payLoad = {};
    |       ^^^^^^^ Prefer \`payload\` over \`payLoad\`.

Suggestion 1/1: Rename to \`payload\`.:
  1 | const payload = {};

`;

exports[`consistent-compound-words > invalid(7): {\"userName\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"userName": 1}

`;

exports[`consistent-compound-words > invalid(7): {\"userName\": 1} 2`] = `

Message:
> 1 | {"userName": 1}
    |  ^^^^^^^^^^ Prefer \`username\` over \`userName\`.

`;

exports[`consistent-compound-words > invalid(70): import {userName} from \"user-name\"; 1`] = `

Options:
- checkDefaultAndNamespaceImports: true
  checkShorthandImports: true

Code:
  1 | import {userName} from "user-name";

`;

exports[`consistent-compound-words > invalid(70): import {userName} from \"user-name\"; 2`] = `

Message:
> 1 | import {userName} from "user-name";
    |         ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | import {userName as username} from "user-name";

`;

exports[`consistent-compound-words > invalid(71): const {userName} = object; 1`] = `

Options:
- checkShorthandProperties: true

Code:
  1 | const {userName} = object;

`;

exports[`consistent-compound-words > invalid(71): const {userName} = object; 2`] = `

Message:
> 1 | const {userName} = object;
    |        ^^^^^^^^ Prefer \`username\` over \`userName\`.

Suggestion 1/1: Rename to \`username\`.:
  1 | const {userName: username} = object;

`;

exports[`consistent-compound-words > invalid(72): const fooBar = 1; 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    fooBar: 'foobar'

Code:
  1 | const fooBar = 1;

`;

exports[`consistent-compound-words > invalid(72): const fooBar = 1; 2`] = `

Message:
> 1 | const fooBar = 1;
    |       ^^^^^^ Prefer \`foobar\` over \`fooBar\`.

Suggestion 1/1: Rename to \`foobar\`.:
  1 | const foobar = 1;

`;

exports[`consistent-compound-words > invalid(73): const username = 1;\nconst userName = 2;\nconsole.log(username, userName); 1`] = `

  1 | const username = 1;
  2 | const userName = 2;
  3 | console.log(username, userName);

`;

exports[`consistent-compound-words > invalid(73): const username = 1;\nconst userName = 2;\nconsole.log(username, userName); 2`] = `

Message:
  1 | const username = 1;
> 2 | const userName = 2;
    |       ^^^^^^^^ Prefer \`username_\` over \`userName\`.
  3 | console.log(username, userName);

Suggestion 1/1: Rename to \`username_\`.:
  1 | const username = 1;
  2 | const username_ = 2;
  3 | console.log(username, username_);

`;

exports[`consistent-compound-words > invalid(74): foo.userName = 1;\nconsole.log(foo.userName); 1`] = `

Options:
- checkProperties: true

Code:
  1 | foo.userName = 1;
  2 | console.log(foo.userName);

`;

exports[`consistent-compound-words > invalid(74): foo.userName = 1;\nconsole.log(foo.userName); 2`] = `

Message:
> 1 | foo.userName = 1;
    |     ^^^^^^^^ Prefer \`username\` over \`userName\`.
  2 | console.log(foo.userName);

`;

exports[`consistent-compound-words > invalid(75): const FooBar = 1; 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    FooBar: 'Foobar'

Code:
  1 | const FooBar = 1;

`;

exports[`consistent-compound-words > invalid(75): const FooBar = 1; 2`] = `

Message:
> 1 | const FooBar = 1;
    |       ^^^^^^ Prefer \`Foobar\` over \`FooBar\`.

Suggestion 1/1: Rename to \`Foobar\`.:
  1 | const Foobar = 1;

`;

exports[`consistent-compound-words > invalid(76): const fooBar = 1; 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    fooBar: 'foo-bar'

Code:
  1 | const fooBar = 1;

`;

exports[`consistent-compound-words > invalid(76): const fooBar = 1; 2`] = `

Message:
> 1 | const fooBar = 1;
    |       ^^^^^^ Prefer \`foo-bar\` over \`fooBar\`.

`;

exports[`consistent-compound-words > invalid(77): const fooBar = 1;\nconst fooBaz = 2; 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    fooBar: 'foobar'
    fooBaz: 'foobar'

Code:
  1 | const fooBar = 1;
  2 | const fooBaz = 2;

`;

exports[`consistent-compound-words > invalid(77): const fooBar = 1;\nconst fooBaz = 2; 2`] = `

Message:
> 1 | const fooBar = 1;
    |       ^^^^^^ Prefer \`foobar\` over \`fooBar\`.
  2 | const fooBaz = 2;

Suggestion 1/1: Rename to \`foobar\`.:
  1 | const foobar = 1;
  2 | const fooBaz = 2;

`;

exports[`consistent-compound-words > invalid(77): const fooBar = 1;\nconst fooBaz = 2; 3`] = `

Message:
  1 | const fooBar = 1;
> 2 | const fooBaz = 2;
    |       ^^^^^^ Prefer \`foobar_\` over \`fooBaz\`.

Suggestion 1/1: Rename to \`foobar_\`.:
  1 | const fooBar = 1;
  2 | const foobar_ = 2;

`;

exports[`consistent-compound-words > invalid(78): const $el = 1; 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    $el: '$element'

Code:
  1 | const $el = 1;

`;

exports[`consistent-compound-words > invalid(78): const $el = 1; 2`] = `

Message:
> 1 | const $el = 1;
    |       ^^^ Prefer \`$element\` over \`$el\`.

Suggestion 1/1: Rename to \`$element\`.:
  1 | const $element = 1;

`;

exports[`consistent-compound-words > invalid(79): const foo = class PassWord {}; 1`] = `

  1 | const foo = class PassWord {};

`;

exports[`consistent-compound-words > invalid(79): const foo = class PassWord {}; 2`] = `

Message:
> 1 | const foo = class PassWord {};
    |                   ^^^^^^^^ Prefer \`Password\` over \`PassWord\`.

Suggestion 1/1: Rename to \`Password\`.:
  1 | const foo = class Password {};

`;

exports[`consistent-compound-words > invalid(8): const placeHolder = \"Name\"; 1`] = `

  1 | const placeHolder = "Name";

`;

exports[`consistent-compound-words > invalid(8): const placeHolder = \"Name\"; 2`] = `

Message:
> 1 | const placeHolder = "Name";
    |       ^^^^^^^^^^^ Prefer \`placeholder\` over \`placeHolder\`.

Suggestion 1/1: Rename to \`placeholder\`.:
  1 | const placeholder = "Name";

`;

exports[`consistent-compound-words > invalid(8): {\"back-ground\": {\"data_base\": 1}} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"back-ground": {"data_base": 1}}

`;

exports[`consistent-compound-words > invalid(8): {\"back-ground\": {\"data_base\": 1}} 2`] = `

Message:
> 1 | {"back-ground": {"data_base": 1}}
    |  ^^^^^^^^^^^^^ Prefer \`background\` over \`back-ground\`.

`;

exports[`consistent-compound-words > invalid(8): {\"back-ground\": {\"data_base\": 1}} 3`] = `

Message:
> 1 | {"back-ground": {"data_base": 1}}
    |                  ^^^^^^^^^^^ Prefer \`database\` over \`data_base\`.

`;

exports[`consistent-compound-words > invalid(80): const fooItem = 1;\nconst ıtem = 2; 1`] = `

Options:
- extendDefaultReplacements: false
  replacements:
    ıtem: 'element'

Code:
  1 | const fooItem = 1;
  2 | const ıtem = 2;

`;

exports[`consistent-compound-words > invalid(80): const fooItem = 1;\nconst ıtem = 2; 2`] = `

Message:
  1 | const fooItem = 1;
> 2 | const ıtem = 2;
    |       ^^^^ Prefer \`element\` over \`ıtem\`.

Suggestion 1/1: Rename to \`element\`.:
  1 | const fooItem = 1;
  2 | const element = 2;

`;

exports[`consistent-compound-words > invalid(9): const preView = render(); 1`] = `

  1 | const preView = render();

`;

exports[`consistent-compound-words > invalid(9): const preView = render(); 2`] = `

Message:
> 1 | const preView = render();
    |       ^^^^^^^ Prefer \`preview\` over \`preView\`.

Suggestion 1/1: Rename to \`preview\`.:
  1 | const preview = render();

`;

exports[`consistent-compound-words > invalid(9): {\"back\\u0047round\": 1} 1`] = `

Options:
- checkProperties: true

Code:
  1 | {"back\\u0047round": 1}

`;

exports[`consistent-compound-words > invalid(9): {\"back\\u0047round\": 1} 2`] = `

Message:
> 1 | {"back\\u0047round": 1}
    |  ^^^^^^^^^^^^^^^^^ Prefer \`background\` over \`backGround\`.

`;
